# plugin.video.rivulet

./: .gitignore  Makefile  README.md  addon.xml  addons.xml  addons.xml.md5  default.py  index.html  pyproject.toml  requirements-dev.txt  service.py
.github/workflows/: build.yml  repo.yml  test.yml
lib/: __init__.py  advancedsettings.py  serverbin.py  service_runner.py  store.py
lib/stremio/: __init__.py  addons.py  api.py  server.py  streaminfo.py  subtitles.py  types.py
lib/ui/: __init__.py  addonswindow.py  catalogpicker.py  compat.py  detailwindow.py  homewindow.py  infowindow.py  librarywindow.py  player.py  router.py  searchwindow.py  streamswindow.py  uicommon.py  views.py
plugin.video.rivulet/: addon.xml
repository.rivulet/: addon.xml
resources/: advancedsettings.xml  settings.xml
resources/language/resource.language.ar_sa/: strings.po
resources/language/resource.language.de_de/: strings.po
resources/language/resource.language.en_gb/: strings.po
resources/language/resource.language.es_es/: strings.po
resources/language/resource.language.fr_fr/: strings.po
resources/language/resource.language.it_it/: strings.po
resources/language/resource.language.ja_jp/: strings.po
resources/language/resource.language.ko_kr/: strings.po
resources/language/resource.language.nl_nl/: strings.po
resources/language/resource.language.pl_pl/: strings.po
resources/language/resource.language.pt_br/: strings.po
resources/language/resource.language.ru_ru/: strings.po
resources/language/resource.language.tr_tr/: strings.po
resources/language/resource.language.zh_cn/: strings.po
resources/skins/Default/720p/: AddonsWindow.xml  CatalogPickerWindow.xml  DetailWindow.xml  HomeWindow.xml  SearchWindow.xml  ShowcaseWindow.xml  StreamsWindow.xml
scripts/: capture_screenshots.py
tests/: __init__.py  conftest.py  test_addons.py  test_addonswindow.py  test_advancedsettings.py  test_api.py  test_catalogpicker.py  test_detailwindow.py  test_homewindow.py  test_infowindow.py  test_librarywindow.py  test_player_buffer.py  test_router.py  test_searchwindow.py  test_server.py  test_serverbin.py  test_service_runner.py  test_store.py  test_streaminfo.py  test_streamswindow.py  test_subtitles.py  test_uicommon.py  test_views.py
tests/kodistubs/: __init__.py  fakes.py  install.py  modules.py
